[gd_scene load_steps=24 format=3 uid="uid://bik162a4anf2x"]

[ext_resource type="Script" path="res://Scenes/polyrhythm_game_scene.gd" id="1_vabtg"]
[ext_resource type="Script" uid="uid://bfh6t1ooqft1h" path="res://Scripts/moving_circle.gd" id="2_8lhxk"]
[ext_resource type="PackedScene" uid="uid://05c7pb0nfoex" path="res://Scenes/Shared/MovingCircle.tscn" id="2_b02qn"]
[ext_resource type="AudioStream" uid="uid://c17iemnbpj7rm" path="res://Audio/tick.mp3" id="3_q1dhj"]
[ext_resource type="Texture2D" uid="uid://battv6y8amyfm" path="res://Assets/vecteezy_geometric-design-element_21048718.png" id="3_vabtg"]
[ext_resource type="AudioStream" uid="uid://6cxxi4ru1a8f" path="res://Audio/solid-snare.wav" id="4_8lhxk"]
[ext_resource type="Texture2D" uid="uid://s3dmyig6b0or" path="res://Assets/Metronome_Pendulum.png" id="5_vabtg"]
[ext_resource type="PackedScene" uid="uid://66tbdhkgqns1" path="res://Scenes/Shared/hitline_2-4.tscn" id="8_dj2j3"]
[ext_resource type="PackedScene" uid="uid://b2fgioqo75kcb" path="res://Scenes/Shared/hitline_3-4.tscn" id="9_ndwsn"]
[ext_resource type="Script" uid="uid://xy3210x8a5kp" path="res://Scenes/touch_pad_container.gd" id="10_sd245"]
[ext_resource type="Material" uid="uid://dykh6lk1hfo2u" path="res://Menu Shaders/Asset_Color.tres" id="11_d0yf2"]
[ext_resource type="Texture2D" uid="uid://ccmbu6ekof6rh" path="res://Assets/Drum2.png" id="12_iv2sl"]
[ext_resource type="Texture2D" uid="uid://bu1mpu22fct5w" path="res://Assets/Drum2_F.png" id="13_tkqq0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mgbhm"]
radius = 18.0

[sub_resource type="Animation" id="Animation_ewxye"]
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(514, 442), Vector2(1542, 442)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("TickSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Solid-snare:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_817jg"]
resource_name = "animation w sound_2"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(517, 688), Vector2(1556, 688)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("TickSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25, 1.25, 2.25, 3.25, 4.66667, 5.66667, 6.66667, 7.66667, 8.86667, 9.86667, 10.8667, 11.8667, 13.0333, 14.0333, 15.0333, 16.0333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Solid-snare:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 1.6, 2.6, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true]
}

[sub_resource type="Animation" id="Animation_mgbhm"]
resource_name = "animation w sound_top"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(517, 440), Vector2(1556, 440)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("TickSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25, 1.25, 2.25, 3.25, 4.66667, 5.66667, 6.66667, 7.66667, 8.86667, 9.86667, 10.8667, 11.8667, 13.0333, 14.0333, 15.0333, 16.0333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Solid-snare:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 1.6, 2.6, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true]
}

[sub_resource type="Animation" id="Animation_np3vi"]
resource_name = "moving circle v2"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(517, 442), Vector2(1622.5, 442)]
}

[sub_resource type="Animation" id="Animation_jj1xe"]
resource_name = "moving_circle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(517, 442), Vector2(1556, 442)]
}

[sub_resource type="Animation" id="Animation_4xiap"]
resource_name = "moving_circle_100"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.85, 1.45, 2.05, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(517, 442), Vector2(579, 442), Vector2(837, 442), Vector2(1092, 442), Vector2(1350, 442), Vector2(1542, 442)]
}

[sub_resource type="Animation" id="Animation_5dgvu"]
resource_name = "moving_circle_120"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75, 1.25, 1.75, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(517, 442), Vector2(581, 442), Vector2(838, 442), Vector2(1093, 442), Vector2(1350, 442), Vector2(1542, 442)]
}

[sub_resource type="Animation" id="Animation_uscyt"]
resource_name = "moving_circle_80"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 1, 1.75, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(517, 442), Vector2(581, 442), Vector2(838, 442), Vector2(1092, 442), Vector2(1349, 442), Vector2(1540, 442)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lsk3b"]
_data = {
&"RESET": SubResource("Animation_ewxye"),
&"animation w sound_2": SubResource("Animation_817jg"),
&"animation w sound_top": SubResource("Animation_mgbhm"),
&"moving circle v2": SubResource("Animation_np3vi"),
&"moving_circle": SubResource("Animation_jj1xe"),
&"moving_circle_100": SubResource("Animation_4xiap"),
&"moving_circle_120": SubResource("Animation_5dgvu"),
&"moving_circle_80": SubResource("Animation_uscyt")
}

[node name="Polyrhythm_Game_Scene" type="Node2D"]
script = ExtResource("1_vabtg")

[node name="MovingCircleTop" type="Node2D" parent="."]
z_index = 3
position = Vector2(517, 440)
script = ExtResource("2_8lhxk")

[node name="Circle" type="Sprite2D" parent="MovingCircleTop"]
z_index = 1
scale = Vector2(0.0106773, 0.0106773)
texture = ExtResource("3_vabtg")

[node name="OutlineSprite" type="Sprite2D" parent="MovingCircleTop"]
modulate = Color(0.188235, 0.0862745, 0.0509804, 1)
scale = Vector2(0.016, 0.016)
texture = ExtResource("3_vabtg")

[node name="HitArea" type="Area2D" parent="MovingCircleTop"]
visible = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingCircleTop/HitArea"]
shape = SubResource("CircleShape2D_mgbhm")
debug_color = Color(0, 0.6, 0.701961, 0)
metadata/_edit_lock_ = true

[node name="TopBallAnim" type="AnimationPlayer" parent="MovingCircleTop"]
libraries = {
&"": SubResource("AnimationLibrary_lsk3b")
}
autoplay = "moving circle v2"

[node name="TickSound" type="AudioStreamPlayer2D" parent="MovingCircleTop"]
position = Vector2(-7, 486)
stream = ExtResource("3_q1dhj")

[node name="Solid-snare" type="AudioStreamPlayer" parent="MovingCircleTop"]
stream = ExtResource("4_8lhxk")

[node name="MetronomePendulum" type="Sprite2D" parent="MovingCircleTop"]
position = Vector2(0, -56)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_vabtg")

[node name="MovingCircleBottom" parent="." instance=ExtResource("2_b02qn")]
position = Vector2(517, 688)

[node name="HitArea" type="Area2D" parent="MovingCircleBottom"]
visible = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingCircleBottom/HitArea"]
shape = SubResource("CircleShape2D_mgbhm")
debug_color = Color(0, 0.6, 0.701961, 0)
metadata/_edit_lock_ = true

[node name="BottomBallAnim" type="AnimationPlayer" parent="MovingCircleBottom"]
libraries = {
&"": SubResource("AnimationLibrary_lsk3b")
}
autoplay = "moving circle v2"

[node name="TickSound" type="AudioStreamPlayer2D" parent="MovingCircleBottom"]
position = Vector2(-7, 486)
stream = ExtResource("3_q1dhj")

[node name="Solid-snare" type="AudioStreamPlayer" parent="MovingCircleBottom"]
stream = ExtResource("4_8lhxk")

[node name="MetronomePendulum" type="Sprite2D" parent="MovingCircleBottom"]
position = Vector2(0, -56)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_vabtg")

[node name="HitLineTop" parent="." instance=ExtResource("8_dj2j3")]
position = Vector2(984, 384)
scale = Vector2(0.4, 0.4)

[node name="HitLineBottom" parent="." instance=ExtResource("9_ndwsn")]
position = Vector2(984, 632)
scale = Vector2(0.4, 0.4)

[node name="TouchPadContainer" type="Node2D" parent="."]
script = ExtResource("10_sd245")

[node name="LeftTouchPad" type="TouchScreenButton" parent="TouchPadContainer"]
material = ExtResource("11_d0yf2")
position = Vector2(-197, 584)
scale = Vector2(0.441223, 0.438173)
texture_normal = ExtResource("12_iv2sl")
action = "left_pad"

[node name="RightTouchPad" type="TouchScreenButton" parent="TouchPadContainer"]
material = ExtResource("11_d0yf2")
position = Vector2(1489, 586)
scale = Vector2(0.442001, 0.438986)
texture_normal = ExtResource("13_tkqq0")
action = "right_pad"

[node name="Snare" type="AudioStreamPlayer" parent="TouchPadContainer"]
stream = ExtResource("4_8lhxk")

[connection signal="pressed" from="TouchPadContainer/LeftTouchPad" to="TouchPadContainer" method="_on_left_touch_pad_pressed"]
[connection signal="released" from="TouchPadContainer/LeftTouchPad" to="TouchPadContainer" method="_on_left_touch_pad_released"]
[connection signal="pressed" from="TouchPadContainer/RightTouchPad" to="TouchPadContainer" method="_on_right_touch_pad_pressed"]
[connection signal="released" from="TouchPadContainer/RightTouchPad" to="TouchPadContainer" method="_on_right_touch_pad_released"]
